--- a/community.org
+++ b/community.org
@@ -4,13 +4,16 @@
 #+include: "./resources/preamble.html" export html
 #+include: "./resources/normal-outline-3.html" export html
 
-* Mailing list
+* Joining the mailing list
   :PROPERTIES:
   :CUSTOM_ID: mailing-list
   :END:
 
-Org has an active mailing list.  You can [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribe]] and [[https://orgmode.org/list][browse the
-archive]] here at =orgmode.org= or via the [[https://lists.gnu.org/archive/html/emacs-orgmode/][GNU mailman archive]].
+Org mailing list is the central place where to connect with Org
+community.  You can [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribe to the list]] and [[https://orgmode.org/list][browse the archive]] 
+here at =orgmode.org= or via the [[https://lists.gnu.org/archive/html/emacs-orgmode/][GNU mailman archive]].
+
+You can also check this page for more [[https://orgmode.org/worg/org-web-social.html][Org news on the social web]].
 
 * Chatting about Org
   :PROPERTIES:
@@ -20,10 +23,9 @@ archive]] here at =orgmode.org= or via the [[https://lists.gnu.org/archive/html/
 You can connect with other org-thusiasts via IRC at ~#orgmode~ on
 [[https://freenode.net/][freenode]].
 
-* Current contributors
+* Listing current contributors
   :PROPERTIES:
   :CUSTOM_ID: contributors
   :END:
 
 The full [[https://orgmode.org/worg/org-contribute.html][list of contributors]] to Org mode is maintained in /Worg/.
-
