--- a/community.org
+++ b/community.org
@@ -10,8 +10,10 @@
   :END:
 
 Org mailing list is the central place where to connect with Org
-community.  You can [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribe to the list]] and [[https://orgmode.org/list][browse the archive]] 
-here at =orgmode.org= or via the [[https://lists.gnu.org/archive/html/emacs-orgmode/][GNU mailman archive]].
+community.  
+
+You can [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribe to the list]] and [[https://orgmode.org/list][browse the archive]] here at
+=orgmode.org= or via the [[https://lists.gnu.org/archive/html/emacs-orgmode/][GNU mailman archive]].
 
 You can also check this page for more [[https://orgmode.org/worg/org-web-social.html][Org news on the social web]].
 
