--- a/Changes_old.org
+++ b/Changes_old.org
@@ -2,7 +2,7 @@
 #+author:    Carsten Dominik
 #+email:     carsten at orgmode dot org
 #+setupfile: setup.org
-#+description: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+description: Org: an Emacs Mode for Notes, Planning and Authoring
 #+include: "./resources/preamble.html" export html
 #+link:      git https://code.orgmode.org/bzg/org-mode/commit/%s
 #+link:      doc https://orgmode.org/worg/doc.html#%s
