--- a/elpa.org
+++ b/elpa.org
@@ -1,7 +1,7 @@
 #+title: Org Emacs lisp Package Archive
 #+date: 2012-09-26
 #+setupfile: setup.org
-#+description: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+description: Org: an Emacs Mode for Notes, Planning and Authoring
 #+include: "./resources/preamble.html" export html
 
 * Org Emacs lisp Package Archive
