--- a/quickstart.org
+++ b/quickstart.org
@@ -1,6 +1,6 @@
 #+TITLE: Quickstart | Org mode
 #+setupfile: setup.org
-#+description: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+description: Org: an Emacs Mode for Notes, Planning and Authoring
 #+include: "./resources/preamble.html" export html
 
 * Getting started with Org-mode
