--- a/Changes.org
+++ b/Changes.org
@@ -11,6 +11,10 @@
 <div class="banner slim"> <p id="a-quote"></p> </div>
 #+end_export
 
+You can keep up with upcoming changes, requests for help, bug reports
+and submitted patch by checking [[https://updates.orgmode.org][updates.orgmode.org]] and by subscribing
+to the RSS feeds there.
+
 * Version 9.4
 ** Incompatible changes
 *** Possibly broken internal file links: please check and fix
