quickstart.org: Small rephrasing and formatting fixes

--- a/quickstart.org
+++ b/quickstart.org
@@ -4,11 +4,11 @@
 #+include: "./resources/preamble.html" export html
 
 * Getting started with Org-mode
-:PROPERTIES:
-:CUSTOM_ID: getting-started
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: getting-started
+  :END:
 
-In its simplest form, Org is like any other markup language.  
+In its simplest form, Org is like any other markup language.
 
 You can write [[https://orgmode.org/worg/dev/org-syntax.html][Org syntax]] in any text editor.
 
@@ -21,9 +21,9 @@ that transforms Org syntax into a living, interactive document.
 #+end_center
 
 * Preamble
-:PROPERTIES:
-:CUSTOM_ID: preamble
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: preamble
+  :END:
 
 At the start of a file (before the first headline), it is common to
 set the title, author and other [[https://orgmode.org/manual/Export-Settings.html][export options]].
@@ -34,9 +34,9 @@ set the title, author and other [[https://orgmode.org/manual/Export-Settings.htm
 #+END_SRC
 
 * Headlines
-:PROPERTIES:
-:CUSTOM_ID: headlines
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: headlines
+  :END:
 
 Lines that start with an asterisk ~*~ are [[https://orgmode.org/worg/dev/org-syntax.html#Headlines_and_Sections][headlines]].
 
@@ -64,9 +64,9 @@ keyword such as ~TODO~ or ~HOLD~.
 #+END_SRC
 
 * Markup
-:PROPERTIES:
-:CUSTOM_ID: markup
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: markup
+  :END:
 
 To mark up text in Org, simply surround it with one or more marker
 characters.  *Bold*, /italic/ and _underline_ are fairly intuitive, and the
@@ -86,9 +86,10 @@ if they are present since their contents are interpreted =_literally_=.
 See [[https://orgmode.org/worg/dev/org-syntax.html#Emphasis_Markers][Emphasis Markers]] for more details.
 
 * Lists
-:PROPERTIES:
-:CUSTOM_ID: lists
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: lists
+  :END:
+
 Unordered lists start with ~+~, ~-~, or ~*~[fn::~*~ cannot
 be used to start a plain list if it is immediately preceded by
 a newline because it will be interpreted as a headline.].
@@ -119,9 +120,10 @@ Lists can contain tags (and checkboxes at the same time).
 #+END_SRC
 
 * Links
-:PROPERTIES:
-:CUSTOM_ID: links
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: links
+  :END:
+
 To create a link put the target between two square brackets, like so: ~[[target]]~.
 You can include a description in square brackets after the target ~[[target][desc]]~.
 
@@ -148,20 +150,26 @@ For more on links, see the manual sections for
 [[https://orgmode.org/manual/External-Links.html][External Links]].
 
 * Images
-:PROPERTIES:
-:CUSTOM_ID: images
-:END:
-Org mode automatically recognizes and renders image links.
-Just link to an image (don't include a description). That's it. \\
+  :PROPERTIES:
+  :CUSTOM_ID: images
+  :END:
+
+Org mode automatically recognizes and renders image links during
+export.  Just link to an image (don't include a description). That's
+it. \\
 ~[[https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png]]~
 
 #+attr_html: :height 120px
 [[https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png]]
 
+Images located on your computer can also be rendered in the Emacs
+buffer with =C-c C-x C-v=.
+
 * Blocks
-:PROPERTIES:
-:CUSTOM_ID: blocks
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: blocks
+  :END:
+
 Org mode uses =#+BEGIN= ... =#+END= blocks for many purposes.
 Some of the basic blocks types quote, example, and src.
 
@@ -186,9 +194,10 @@ A hello world example cannot even begin to scratch the surface
 Org mode's support for [[https://orgmode.org/manual/Working-with-Source-Code.html][working with source code]].
 
 * Tables
-:PROPERTIES:
-:CUSTOM_ID: tables
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: tables
+  :END:
+
 Org mode comes with a table editor complete with support cell references
 and formulas.
 
@@ -215,9 +224,9 @@ Worried about aligning free text tables?
 Org mode does it in a single keystroke -- =tab=.
 
 * Comments
-:PROPERTIES:
-:CUSTOM_ID: comments
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: comments
+  :END:
 
 Org mode has a variety of ways to add comments.
 
@@ -256,9 +265,9 @@ This text will be exported and code blocks will run.
 #+END_SRC
 
 * Macros
-:PROPERTIES:
-:CUSTOM_ID: macros
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: macros
+  :END:
 
 Org has many more advanced features built into its syntax.  To give
 only a single example, let's take a look at [[https://orgmode.org/manual/Macro-Replacement.html][macros]].
@@ -274,9 +283,9 @@ Regular text. {{{red(This text will be red.)}}} More regular text.
 #+END_SRC
 
 * Next steps
-:PROPERTIES:
-:CUSTOM_ID: next-steps
-:END:
+  :PROPERTIES:
+  :CUSTOM_ID: next-steps
+  :END:
 
 Looking for something in particular?  The [[file:manual/][manual]] ([[file:org.pdf][PDF]]) is a good place
 to start.
