Correct link to rust parser in Tools page
This closes #7

--- a/tools.org
+++ b/tools.org
@@ -134,7 +134,7 @@ Org​::parser
 or textile.
 {{{end-link}}}
 ** Rust
-{{{gh(Lythenas/rust-orgmode)}}}
+{{{gh(poiscript/orgize}}}
 [[https://upload.wikimedia.org/wikipedia/commons/d/d5/Rust_programming_language_black_logo.svg]]
 
 /Orgize/ parses org files and can render them to HTML.
