--- a/setup.org
+++ b/setup.org
@@ -33,3 +33,5 @@
 #+html_head:   <meta name="msapplication-config" content="/resources/img/favicons/browserconfig.xml">
 #+html_head:   <link rel="stylesheet" href="/resources/style/org.css" type="text/css" />
 #+html_head:   <link rel="preload" href="/resources/fonts/droid-serif.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+#+html_head:   <link rel="preload" href="/resources/fonts/droid-serif-italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+#+html_head:   <link rel="preload" href="/resources/fonts/droid-sans-mono.woff2" as="font" type="font/woff2" crossorigin="anonymous">
