Add minified CSS files and map files

--- a/fr/index.org
+++ b/fr/index.org
@@ -2,7 +2,7 @@
 #+setupfile: ../setup.org
 #+language:  fr
 #+description: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+html_head: <link rel="stylesheet" href="/resources/style/index.css" type="text/css" />
+#+html_head: <link rel="stylesheet" href="/resources/style/index.min.css" type="text/css" />
 #+html_head: <link rel="preload" href="/resources/img/org-mode-unicorn.svg" as="image" type="image/svg+xml">
 #+include: "../resources/preamble.html" export html
 
