--- a/index.org
+++ b/index.org
@@ -5,6 +5,7 @@
 #+html_head: <link rel="preload" href="/resources/img/org-mode-unicorn.svg" as="image" type="image/svg+xml">
 #+include: "./resources/preamble.html" export html
 
+#+html_head: <link rel="stylesheet" href="/resources/style/org-demo.min.css" type="text/css" />
 #+include: "./resources/normal-outline-3.html" export html
 
 #+begin_export html
@@ -41,7 +42,6 @@
     <meta itemprop="softwareVersion" content="9.3.8">
     <meta itemprop="datePublished" content="2020-08-07">
     <meta itemprop="url" content="https://orgmode.org">
-    <meta itemprop="screenshot" content="https://orgmode.org/resources/img/main.svg">
   </div>
   </div>
   <div class="banner slim green inline">
@@ -91,13 +91,15 @@
 
 * Elaboration + demo image                                        :ignore:
 
+#+attr_html: :style margin-top:2rem;
 Org is a highly flexible structured plain text file format, composed
 of a few simple, yet versatile, structures --- constructed to be both
 [[https://karl-voit.at/2017/09/23/orgmode-as-markup-only/][simple enough for the novice]] and [[http://howardism.org/Technical/Emacs/literate-devops.html][powerful enough for the expert]].
 
-#+attr_html: :alt An example org file, showing a few basic elements
-#+attr_html: :style max-width:min(45rem, 80vw); background-color:#7a92; padding: 1rem 0;
-[[file:resources/img/main.svg]]
+Get a glimpse of the expressive power Org offers in the example below.
+Click the headlines and links to discover how Org intelligently folds structural content.
+
+#+include: org-demo.html export html
 
 * Further reading
   :PROPERTIES:
